Added team f's code

--- a/tasks/task-4/index.html
+++ b/tasks/task-4/index.html
@@ -6,6 +6,7 @@
     <!-- link to css-->
     <link rel="stylesheet" href="css/garden_style.css">
     <!-- link to main script-->
+    <script src="js/weather.js"></script>
     <script src="js/Bird.js"></script>
     <script src="js/Sun.js"></script>
     <script src="js/Flower.js"></script>
